<resources>
    <string name="app_name">Movie Catalogue MADE Submission 1</string>
    <string name="txt_movie">Movie</string>
    <string name="txt_favorite">Favorite</string>
    <string name="txt_menu_favorite">Favorite</string>
    <string name="txt_something_wrong">Oops.. something went wrong</string>
    <string name="txt_home_fragment">Home fragment</string>
    <string name="txt_title">TItle</string>
    <string name="txt_colon">\t:\t</string>
    <string name="txt_original">Original</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_release_date">Release Date</string>
    <string name="title_favorite">Favorite</string>
</resources>