<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:text="@string/txt_title"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:text="@string/txt_colon"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_title"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:text="@string/txt_original"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:text="@string/txt_colon"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_original_title"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin">

                <TextView
                    android:text="@string/txt_release_date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:text="@string/txt_colon"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:text="@string/txt_overview"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>